basic style done

--- a/index.html
+++ b/index.html
@@ -11,32 +11,38 @@
 
 <body>
     <div class="container">
-        <div class="slidebar">
-            Sathi
+        <div class="sidebar">
             <nav>
                 <ul>
-                    <li>
-                        Home
-                    </li>
-                    <li>
-                        My intro
-                    </li>
-                    <li>
-                        Services
-                    </li>
-                    <li>
-                        CV
-                    </li>
-                    <li>
-                        Bloge
-                    </li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/intro.html">My intro</a></li>
+                    <li><a href="/projects.html">Projects</a></li>
+                    <li><a href="/blog.html">Blog</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
         <div class="main">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse eaque eius illo modi. Sed nam ea recusandae
-            harum
-            aliquid quod maiores sit ipsam maxime nemo, amet reiciendis excepturi molestiae enim!
+            <div class="infoContainer">
+                <div class="devInfo">
+                    <div class="hello">Hi, I am</div>
+                    <div class="name">Sathi</div>
+                    <div class="about">Developer, Artist</div>
+                    <div class="moreabout">I am a developer, and I love to drink coffee. I live in Dhaka and I love to
+                        visit santmartin by enjoying nature</div>
+                    <div class="buttons">
+                        <button>
+                            Download CV
+                        </button>
+                        <button>
+                            Contact Me
+                        </button>
+                    </div>
+                </div>
+                <div class="devPic ">
+                    <img src="dev.png" alt="Me ">
+                </div>
+            </div>
         </div>
     </div>
 
